[build-system]
requires = ["setuptools>=61.0,<75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "typesmith"
version = "0.2.1"
description = "Terminal auto-typer for recording tutorials, demos, and videos"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
authors = [
    { name = "Brad Traversy" },
]
keywords = ["terminal", "typing", "tutorial", "recording", "demo", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]

[tool.setuptools]
py-modules = ["typesmith"]

[project.scripts]
typesmith = "typesmith:main"

[project.urls]
Homepage = "https://github.com/bradtraversy/typesmith"
Repository = "https://github.com/bradtraversy/typesmith"
